tests/harness/errors/145_str_starts_with_hint.eu
# Error: using camelCase 'startsWith' — 'str.starts-with?' is the correct eucalypt function
text: "hello world"
result: text str.startsWith("hello")
